--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 text {
   font: 10px sans-serif;
   text-anchor: middle;
-  fill:white;
 }
 
 </style>
@@ -18,7 +17,7 @@ var svg = d3.select("svg"),
 
 var format = d3.format(",d");
 
-var color = d3.scaleOrdinal(d3.schemeCategory10);
+var color = d3.scaleOrdinal.range(['#827d92','#f6bd1f','#93eaa3','#585bdb','#949225','#533049','#113d48','#f8ef98','#c4272d','#958a95]);
 
 var pack = d3.pack()
     .size([width, width])
