--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@ var svg = d3.select("svg"),
 
 var format = d3.format(",d");
 
-var color =  d3.scale.ordinal()
-		.domain(["1", "2", "3", "4", "5", "6", "6", "7", "8", "9", "10"]);
-		.range(["#605e61", "#f6bd1f", "#93eaa3", "#585bdb", "#949225", "#533049", "#113d48", "#f8ef98", "#c4272d", "#958a95"]);
+var color = d3.scaleOrdinal(d3.schemeCategory10);
 
 var pack = d3.pack()
     .size([width, width])
