--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <style>
 
 text {
-  font: 14px arial;
+  font: 14px sans-serif;
   text-anchor: middle;
   fill: white;
 }
 
 </style>
+
+<body>
+<h1>Group matching IVIS17</h1>
+</body>
+
 <svg width="960" height="880"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
