--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ text {
 </style>
 
 <body>
-<h1>Group matching IVIS17</h1>
+<h1 style="color:blue;">Group matching IVIS17</h1>
 </body>
 
 <svg width="960" height="880"></svg>
