--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@ text {
   fill: white;
 }
 
+h1 {
+  font-family:28px sans-serif;
+  text-anchor: middle;
+}
+
+body {
+  background: #DCF3ED;
+}
+
 </style>
 
 <body>
-<h1 style="color:blue;">Group matching IVIS17</h1>
+<h1>Group matching IVIS17</h1>
 </body>
 
-<svg width="960" height="880"></svg>
+<svg width="960" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
