--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 ﻿<!DOCTYPE html>
 <meta charset="utf-8">
-<style>
 
+<style>
 text {
   font: 14px sans-serif;
   text-anchor: middle;
-  fill: white;
+  fill: #DCF3ED;
 }
 
 h1 {
-  font-family:28px sans-serif;
+  font-family:sans-serif;
   text-anchor: middle;
 }
 
 body {
   background: #DCF3ED;
 }
-
 </style>
 
 <body>
