--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ text {
 h1 {
   font-family:sans-serif;
   text-align: center;
-  fill: white;
+  fill: #FFFFFF;
 }
 
 body {
@@ -23,7 +23,7 @@ body {
 <h1>Group matching IVIS17</h1>
 </body>
 
-<svg width="960" height="800"></svg>
+<svg width="960" height="900"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
