--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ text {
 h1 {
   font-family:sans-serif;
   text-align: center;
-  fill: #FFFFFF;
+  fill: #000000;
+  font-size: 40px;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 </style>
 
 <body>
-<h1>Group matching IVIS17</h1>
+<h1>GROUP MATCHING IVIS17</h1>
 </body>
 
 <svg width="960" height="900"></svg>
