--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ h1 {
   fill: #000000;
   font-size: 40px;
 }
+p {
+  font-family:sans-serif;
+  text-align: center;
+  fill: #000000;
+  font-size: 20px;
 
 body {
   background: #FFFFFF;
@@ -22,9 +27,10 @@ body {
 
 <body>
 <h1>GROUP MATCHING IVIS17</h1>
+<p>Alexander Örtengren</p>
 </body>
 
-<svg width="1200" height="900"></svg>
+<svg width="960" height="900"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
