--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <meta charset="utf-8">
-
+<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 <style>
 text {
-  font: 14px sans-serif;
+  font-family: 'Cinzel', serif;
   text-anchor: middle;
-  fill: #FFFFFF;
+  fill: #000000;
+  font-size: 14px;
 }
 
 h1 {
-  font-family:sans-serif;
+  font-family: 'Cinzel', serif;
   text-align: center;
   fill: #000000;
-  font-size: 40px;
+  font-size: 50px;
 }
 p {
-  font-family:sans-serif;
+  font-family: 'Cinzel', serif;
   text-align: center;
   fill: #000000;
   font-size: 20px;
-
-body {
-  background: #FFFFFF;
 }
+body {
+  background: #e6e6e6;
+}
+
 </style>
 
-<body>
+<body class="center">
 <h1>GROUP MATCHING IVIS17</h1>
-<p>Alexander Örtengren</p>
+<p>by Alexander Örtengren</p>
 </body>
 
 <svg width="960" height="900"></svg>
