--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@ text {
   font-family: 'Cinzel', serif;
   text-anchor: middle;
   fill: #000000;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 h1 {
   font-family: 'Cinzel', serif;
-  text-align: center;
   fill: #000000;
   font-size: 50px;
+  margin-left: 150px;
 }
 p {
   font-family: 'Cinzel', serif;
-  text-align: center;
   fill: #000000;
   font-size: 20px;
+  margin-left: 330px;
 }
 body {
   background: #e6e6e6;
@@ -27,7 +27,7 @@ body {
 
 </style>
 
-<body class="center">
+<body>
 <h1>GROUP MATCHING IVIS17</h1>
 <p>by Alexander Örtengren</p>
 </body>
