--- a/test/index.html
+++ b/test/index.html
@@ -49,7 +49,7 @@ img {
 <p>
 30 countries spread over the planet were selected in order to get a global perspective of the research question stated in the header.
 </p> 
-<img src="Choose 30 countries.png" align="middle" >
+<img src="Choose 30 countries.PNG" align="middle" >
 
 <p>
 Data was collected from the last 20 years, from 1995 to 2014.
