--- a/test/index.html
+++ b/test/index.html
@@ -64,12 +64,12 @@ The variable "Important in life: Religion" was selected first as a reference whi
 <p>
 Religion is in general important to people living in Algeria, Ghana, Tunisia and Egypt. People living in China, Japan, Netherlands and Sweden don't believe it's that important.
 </p>
-<img src="Religion bars.png" align="middle">
+<img src="Religion bars.PNG" align="middle">
 
 <p>
 Correlations between Religion and the other 7 variables; Abortion, Homosexuality, Suicide, Euthanasia, Divorce, Satisfaction with life and Freedom of chioce was analyzed by looking at each bar chart. 
 </p> 
-<img src="Abortion bars.png">
+<img src="Abortion bars.PNG">
 
 <p>
 Comparisons between the 4 waves (20 years) was made to analyze changes over time by using the Time series-tool.
@@ -82,7 +82,7 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 
 <p>The MEAN values for each variable and wave was collected and used as values for the variables.
 </p>
-<img src="variables in excel.png">
+<img src="variables in excel.PNG">
 
 
 <h2>Learnings</h2>
