--- a/test/index.html
+++ b/test/index.html
@@ -41,7 +41,7 @@ img {
 </style>
 
 <body>
-<h1>How does importance of religion impact values in life?</h1>
+<h1>How does importance of religion impact human values?</h1>
 <h2 >IVIS17 Project 2 - Visualizing data from World Values Survey</h2>
 <br>
 
