--- a/planets/index.html
+++ b/planets/index.html
@@ -4,7 +4,7 @@
 <!-- http://syntagmatic.github.com/parallel-coordinates/ -->
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
 <script src="d3.parcoords.js"></script>
 <script src="divgrid.js"></script>
 
