--- a/planets/index.html
+++ b/planets/index.html
@@ -24,7 +24,7 @@ var parcoords = d3.parcoords()("#example")
   .alpha(0.4);
 
 // load csv file and create the chart
-d3.csv('planet.csv', function(data) {
+d3.csv('variablesw6.csv', function(data) {
   parcoords
     .data(data)
     .render()
