--- a/test/index.html
+++ b/test/index.html
@@ -80,10 +80,13 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 <p>To get a better understanding of the correlations between importance of religion and the other 7 variables, a visualization using parallel coordinates was constructed with D3.<br>
 </p>
 
+<a href="https://alexortengren.github.io/planets/">D3 visualization tool</a>
+Try it Yourself »
+
 <p>The MEAN values for each variable and wave was collected and used as values for the variables.
 </p>
 <img src="variables in excel.PNG">
-
+<
 
 <h2>Learnings</h2>
 <p>By using the available data and the visualization tools at the WVS webpage, only an indication of how peoples religious believes impact their satisfaction of life and their values could be seen. <br> Correlations occured among most of the countries (with some exceptions) with the highest or lowest value of religous importance and the "Justifiable-variables". The majority of the people living<br> in countries with low religious importance have a in general a positive attitude towards for example Abortion. 
