--- a/planets/index.html
+++ b/planets/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 
-<title>Linking to Data Table</title> 
+<title>IVIS Project 2</title> 
 <!-- http://syntagmatic.github.com/parallel-coordinates/ -->
+
+<h1>Visualization of how religion impact values in life</h1>
+
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
