--- a/test/index.html
+++ b/test/index.html
@@ -80,8 +80,8 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 <p>To get a better understanding of the correlations between importance of religion and the other 7 variables, a visualization using parallel coordinates was constructed with D3.<br>
 </p>
 
-<a href="https://alexortengren.github.io/planets/">D3 visualization tool</a>
-Try it Yourself »
+<p>You can find the visualization tool<a href="https://alexortengren.github.io/planets/">HERE</a><
+
 
 <p>The MEAN values for each variable and wave was collected and used as values for the variables.
 </p>
