--- a/planets/index.html
+++ b/planets/index.html
@@ -5,10 +5,10 @@
 
 <h1>Visualization of how religion impact values in life</h1>
 <p>With the chart below you can see the relations between the variables. The variables have the following scales:</p>
-<p>Religion: 1 = Not important at all  4 = Very important</p>
-<p>Abortion to Suicide: 1 = Never justifiable  9 = Always justifiable</p>
-<p>Satisfaction with life: 1 = Completely dissatisfied  9 = Completely satisfied</p>
-<p>Freedom of choice: 1 = No choice at all 9 = A great deal of choice</p>
+<p>Religion (how important): 1 = Not important at all,  4 = Very important</p>
+<p>Abortion to Suicide: 1 = Never justifiable,  9 = Always justifiable</p>
+<p>Satisfaction with life: 1 = Completely dissatisfied,  9 = Completely satisfied</p>
+<p>Freedom of choice: 1 = No choice at all, 9 = A great deal of choice</p>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
