--- a/test/index.html
+++ b/test/index.html
@@ -89,9 +89,10 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 
 <p>The color of the lines in the diagram are scaled from green to blue regarding the importance of religion among the population</p>
 <p>By using the brush tool you can easier visualize the correlations. This is the countries with the highest religious importance</p>
-<img src="Brush religion HIGH.jpg">
-<p>This is the countries with the highest religious importance</p>
-<img src="Brush religion LOW.jpg">
+<img src="Brush religion HIGH.JPG">
+<p>This is the countries with the lowest religious importance</p>
+<img src="Brush religion LOW.JPG">
+
 <h2>Learnings</h2>
 <p>By using the available data and the visualization tools at the WVS webpage, only an indication of how peoples religious believes impact their satisfaction of life and their values could be seen. <br> Correlations occured among most of the countries (with some exceptions) with the highest or lowest value of religous importance and the "Justifiable-variables". The majority of the people living<br> in countries with low religious importance have a in general a positive attitude towards for example Abortion. 
 <br>
