--- a/test/index.html
+++ b/test/index.html
@@ -90,7 +90,7 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 <p>The color of the lines in the diagram are scaled from green to blue regarding the importance of religion among the population</p>
 <p>By using the brush tool you can easier visualize the correlations. This is the countries with the highest religious importance</p>
 <img src="Brush religion HIGH.JPG">
-<p>This is the countries with the lowest religious importance</p>
+<p>and this is the countries with the lowest religious importance</p>
 <img src="Brush religion LOW.JPG">
 
 <h2>Learnings</h2>
