--- a/test/index.html
+++ b/test/index.html
@@ -83,9 +83,9 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 <p>You can find the visualization tool<a href="https://alexortengren.github.io/planets/">HERE</a></p>
 
 
-<p>The MEAN values for each variable and wave was collected and used as values for the variables.
+<p>The data was cleaned in Excel where MEAN values for each variable and wave was used as values for the variables.
 </p>
-<img src="variables in excel.PNG">
+
 
 <p>The color of the lines in the diagram are scaled from green to blue regarding the importance of religion among the population</p>
 <p>By using the brush tool you can easier visualize the correlations. This is the countries with the highest religious importance</p>
