--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -80,7 +80,7 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 <p>To get a better understanding of the correlations between importance of religion and the other 7 variables, a visualization using parallel coordinates was constructed with D3.<br>
 </p>
 
-<p>You can find the visualization tool<a href="https://alexortengren.github.io/planets/">HERE</a></p>
+<p>You can find the visualization tool <a href="https://alexortengren.github.io/planets/">here</a></p>
 
 
 <p>The data was cleaned in Excel where MEAN values for each variable and wave was used as values for the variables.
@@ -88,9 +88,9 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 
 
 <p>The color of the lines in the diagram are scaled from green to blue regarding the importance of religion among the population</p>
-<p>By using the brush tool you can easier visualize the correlations. This is the countries with the highest religious importance</p>
+<p>By using the brush tool you can easier visualize the correlations. The countries with the highest religious importance wa brushed</p>
 <img src="Brush religion HIGH.JPG">
-<p>and this is the countries with the lowest religious importance</p>
+<p>as well as the countries with the lowest religious importance</p>
 <img src="Brush religion LOW.JPG">
 
 <h2>Learnings</h2>
