--- a/d3visualization/index.html
+++ b/d3visualization/index.html
@@ -4,7 +4,7 @@
 <!-- http://syntagmatic.github.com/parallel-coordinates/ -->
 
 <h1>Visualization of how religion impact values in life</h1>
-<p>With the chart below you can see the relations between the variables. The variables have the following scales:</p>
+<p>The chart below visualizes the relations between the variables. The variables have the following scales:</p>
 <p>Religion (how important): 1 = Not important at all,  4 = Very important</p>
 <p>Abortion to Suicide: 1 = Never justifiable,  9 = Always justifiable</p>
 <p>Satisfaction with life: 1 = Completely dissatisfied,  9 = Completely satisfied</p>
