--- a/d3visualization/index.html
+++ b/d3visualization/index.html
@@ -2,6 +2,13 @@
 
 <title>IVIS Project 2</title> 
 <!-- http://syntagmatic.github.com/parallel-coordinates/ -->
+<style>
+p {
+  font-family: 'Abel', sans-serif;
+  fill: #000000;
+  font-size: 16px;
+}
+</style>
 
 <h1>Visualization of how religion impact values in life</h1>
 <p>The chart below visualizes the relations between the variables. The variables have the following scales:</p>
