--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -77,25 +77,27 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 
 <h2>Analytic trail 2 - Using D3</h2>
 
-<p>To get a better understanding of the correlations between importance of religion and the other 7 variables, a visualization using parallel coordinates was constructed with D3.<br>
+<p>To get a better understanding of the correlations between importance of religion and the other 7 variables, an interactive visualization tool using parallel coordinates was constructed with D3.<br>
 </p>
 
-<p>You can find the visualization tool <a href="https://alexortengren.github.io/planets/">here</a></p>
+<p>You can find the visualization tool <a href="https://alexortengren.github.io/d3visualization">here</a>.</p>
 
 
-<p>The data was cleaned in Excel where MEAN values for each variable and wave was used as values for the variables.
+<p>The WVS data was cleaned in MS Excel in order to construct a spreadsheet with values for each variable and wave.
 </p>
 
 
-<p>The color of the lines in the diagram are scaled from green to blue regarding the importance of religion among the population</p>
-<p>By using the brush tool you can easier visualize the correlations. The countries with the highest religious importance wa brushed</p>
+<p>The color of the lines in the chart are scaled from green to blue with respect to the importance of religion in the country.</p>
+<p>By using the brush tool you can easier follow specific countries and groups to compare relations between the variables. The countries with the highest religious importance was brushed</p>
 <img src="Brush religion HIGH.JPG">
+
 <p>as well as the countries with the lowest religious importance</p>
 <img src="Brush religion LOW.JPG">
 
+<p>These two brushes indicates that people living in countries where religion is important in life are less justifiable to abortion, homosexuality, divorce etc. than people living in who don't think religion is that important. They also tend to be a little less satisfied with their lifes. No clear correlation could be seen between religion and freedom of choice</p> 
+
 <h2>Learnings</h2>
-<p>By using the available data and the visualization tools at the WVS webpage, only an indication of how peoples religious believes impact their satisfaction of life and their values could be seen. <br> Correlations occured among most of the countries (with some exceptions) with the highest or lowest value of religous importance and the "Justifiable-variables". The majority of the people living<br> in countries with low religious importance have a in general a positive attitude towards for example Abortion. 
-<br>
+ 
 
 </body>
 
