--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -41,7 +41,7 @@ img {
 </style>
 
 <body>
-<h1>How does importance of religion impact human values?</h1>
+<h1>Does importance of religion affect human values?</h1>
 <h2 >IVIS17 Project 2 - Visualizing data from World Values Survey</h2>
 <br>
 
@@ -57,7 +57,15 @@ Data was collected from the last 20 years, from 1995 to 2014.
 <img src="Select waves.jpg" align="middle">
 
 <p>
-The variable "Important in life: Religion" was selected first as a reference which the other 7 variables would be compared with.
+The variable "Important in life: Religion" was selected first as a reference to which the other 7 variables:<br>
+- Justifiable: Abortion<br>
+- Justifiable: Homosexuality<br>
+- Justifiable: Divorce<br>
+- Justifiable: Euthanasia<br>
+- Justifiable: Suicide<br>
+- Satisfaction with life<br>
+- Freedom of choice and control aver own life<br>
+ would be compared with.
 </p>
 <img src="Choose variable.jpg" align="middle">
 
