--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -75,17 +75,16 @@ Religion is in general important to people living in Algeria, Ghana, Tunisia and
 <img src="Religion bars.PNG" align="middle">
 
 <p>
-Correlations between Religion and the other 7 variables; Abortion, Homosexuality, Suicide, Euthanasia, Divorce, Satisfaction with life and Freedom of chioce was analyzed by looking at each bar chart. 
+The other 7 variables was analyzed by looking at each bar chart. 
 </p> 
 <img src="Abortion bars.PNG">
 
-<p>
-Comparisons between the 4 waves (20 years) was made to analyze changes over time by using the Time series-tool.
-</p>
+
+
 
 <h2>Analytic trail 2 - Using D3</h2>
 
-<p>To get a better understanding of the correlations between importance of religion and the other 7 variables, an interactive visualization tool using parallel coordinates was constructed with D3.<br>
+<p>To get a better understanding of the relations between importance of religion and the other 7 variables, an interactive visualization tool using parallel coordinates was constructed with D3.<br>
 </p>
 
 <p>You can find the visualization tool <a href="https://alexortengren.github.io/d3visualization">here</a>.</p>
@@ -95,7 +94,7 @@ Comparisons between the 4 waves (20 years) was made to analyze changes over time
 </p>
 
 
-<p>The color of the lines in the chart are scaled from green to blue with respect to the importance of religion in the country.</p>
+<p>The color of the lines are scaled from green to blue with respect to the importance of religion in the country.</p>
 <p>By using the brush tool you can easier follow specific countries and groups to compare relations between the variables. The countries with the highest religious importance was brushed</p>
 <img src="Brush religion HIGH.JPG">
 
