--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -70,12 +70,16 @@ The variable "Important in life: Religion" was selected first as a reference to 
 <img src="Choose variable.jpg" align="middle">
 
 <p>
-Religion is in general important to people living in Algeria, Ghana, Tunisia and Egypt. People living in China, Japan, Netherlands and Sweden don't believe it's that important.
+The WVS tool showing importance of religion as bars for each country was used for visualization of the survey data.
 </p>
 <img src="Religion bars.PNG" align="middle">
 
 <p>
-The other 7 variables was analyzed by looking at each bar chart. 
+The bars indicated that religion is important to most of thpeople living in Algeria, Ghana, Tunisia and Egypt. People living in China, Japan, Netherlands and Sweden don't believe religion is that important.
+</p>
+
+<p>
+The other 7 variables were analyzed by looking at each bar chart. 
 </p> 
 <img src="Abortion bars.PNG">
 
