--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -75,7 +75,7 @@ The WVS tool showing importance of religion as bars for each country was used fo
 <img src="Religion bars.PNG" align="middle">
 
 <p>
-The bars indicated that religion is important to most of thpeople living in Algeria, Ghana, Tunisia and Egypt. People living in China, Japan, Netherlands and Sweden don't believe religion is that important.
+The bars indicated that religion is important to most of the people living in Algeria, Ghana, Tunisia and Egypt. People living in China, Japan, Netherlands and Sweden don't believe religion is that important.
 </p>
 
 <p>
@@ -83,18 +83,19 @@ The other 7 variables were analyzed by looking at each bar chart.
 </p> 
 <img src="Abortion bars.PNG">
 
+<p>Some correlations between variables could be seen by comparing the charts with each other, 
 
 
 
 <h2>Analytic trail 2 - Using D3</h2>
 
-<p>To get a better understanding of the relations between importance of religion and the other 7 variables, an interactive visualization tool using parallel coordinates was constructed with D3.<br>
+<p>To get a better understanding of the relations between importance of religion and the other 7 variables, an interactive visualization tool using parallel coordinates was constructed with D3 (based on a code by Sundar).<br>
 </p>
 
-<p>You can find the visualization tool <a href="https://alexortengren.github.io/d3visualization">here</a>.</p>
+<p>You can use the visualization tool <a href="https://alexortengren.github.io/d3visualization">here</a>.</p>
 
 
-<p>The WVS data was cleaned in MS Excel in order to construct a spreadsheet with values for each variable and wave.
+<p>The WVS data was cleaned in MS Excel in order to construct a spreadsheet with mean values for each variable over the last 20 years (four waves combined).
 </p>
 
 
@@ -105,10 +106,12 @@ The other 7 variables were analyzed by looking at each bar chart.
 <p>as well as the countries with the lowest religious importance</p>
 <img src="Brush religion LOW.JPG">
 
-<p>These two brushes indicates that people living in countries where religion is important in life are less justifiable to abortion, homosexuality, divorce etc. than people living in who don't think religion is that important. They also tend to be a little less satisfied with their lifes. No clear correlation could be seen between religion and freedom of choice</p> 
+<p>These two brushes in the visualization tool indicates that people living in countries where religion is important in life are less justifiable to abortion, homosexuality, divorce etc. than people living in countries that don't think religion is important. They also tend to be a little less satisfied with their lifes. No clear correlation could be seen between religion and freedom of choice</p>
+<p>These correlations exist in the survey data, but religion is not necessarily the only factor affecting the other variables in real life. </p>  
 
 <h2>Learnings</h2>
- 
+<p>Collecting and cleaning inconsistent data requires both time and patience.</p>
+<p>By visualizing multiple variable data in an interactive way, anwers to reasearch questions could be obtained much faster than using static charts and data tables.</p>
 
 </body>
 
