--- a/Project2AnalyticTrail/index.html
+++ b/Project2AnalyticTrail/index.html
@@ -106,7 +106,7 @@ The other 7 variables were analyzed by looking at each bar chart.
 <p>as well as the countries with the lowest religious importance</p>
 <img src="Brush religion LOW.JPG">
 
-<p>These two brushes in the visualization tool indicates that people living in countries where religion is important in life are less justifiable to abortion, homosexuality, divorce etc. than people living in countries that don't think religion is important. They also tend to be a little less satisfied with their lifes. No clear correlation could be seen between religion and freedom of choice</p>
+<p>These two brushes indicates that people living in countries where religion is important in life are less justifiable to abortion, homosexuality, divorce etc. than people living in countries that don't think religion is important. They also tend to be a little less satisfied with their lives. No clear correlation could be seen between religion and freedom of choice</p>
 <p>These correlations exist in the survey data, but religion is not necessarily the only factor affecting the other variables in real life. </p>  
 
 <h2>Learnings</h2>
