--- a/d3visualization/index.html
+++ b/d3visualization/index.html
@@ -17,7 +17,7 @@ p {
 <script src="d3.parcoords.js"></script>
 <script src="divgrid.js"></script>
 
-<h1>Visualization of how religion impact values in life</h1>
+<h1>Visualization of how religion affect human values</h1>
 <p>The chart below visualizes the relations between the variables. The variables have the following scales:</p>
 <p>Religion (how important): 1 = Not important at all,  4 = Very important</p>
 <p>Abortion to Suicide: 1 = Never justifiable,  9 = Always justifiable</p>
